# mlir-rust

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build-and-deploy-docs-macos14.yaml  build-and-test-macos14.yaml  build-and-test-ubuntu2404.yaml  docs-macos-14.yaml  fedora-41.yaml  macos-14.yaml
container/: Containerfile.fedora41
docs/: testing.md
issues/: linalg_matmul_cast.md  linalg_matmul_cast~resolved.md  tensor_bufferize.md  vector_transfer_write_broadcast.md
scripts/: build-and-test-macos.sh  build-docs-macos.sh  setup-macos.sh
src/: attributes.rs  dialects.rs  effects.rs  exit_code.rs  interfaces.rs  ir.rs  lib.rs  traits.rs  types.rs
src/attributes/: array.rs  bool.rs  dense_array.rs  dense_elements.rs  dense_resource_elements.rs  dictionary.rs  elements.rs  float.rs  index.rs  integer.rs  integer_set.rs  named.rs  opaque.rs  sparse_elements.rs  specialized.rs  strided_layout.rs  string.rs  symbol_ref.rs  type.rs  unit.rs
src/dialects/: affine.rs  arith.rs  cf.rs  common.rs  func.rs  index.rs  linalg.rs  memref.rs  scf.rs  tensor.rs  ub.rs  vector.rs
src/types/: complex.rs  float.rs  function.rs  index.rs  integer.rs  mem_ref.rs  memref.rs  none.rs  opaque.rs  ranked_tensor.rs  shaped.rs  tuple.rs  unit.rs  unranked_mem_ref.rs  unranked_memref.rs  unranked_tensor.rs  vector.rs
tests/: lit-tests.rs
tests/lit-tests-mlir/: affine_apply_1.mlir  affine_apply_2.mlir  affine_delinearize_index_1.mlir  affine_delinearize_index_2.mlir  affine_dma_start_1.mlir  affine_dma_start_2.mlir  affine_dma_wait_1.mlir  affine_for_1.mlir  affine_for_2.mlir  affine_for_3.mlir  affine_for_4.mlir  affine_if_1.mlir  affine_if_2.mlir  affine_integer_set_1.mlir  affine_load_1.mlir  affine_load_2.mlir  affine_max_1.mlir  affine_min_1.mlir  affine_parallel_1.mlir  affine_parallel_2.mlir  affine_parallel_3.mlir  affine_prefetch_1.mlir  affine_store_1.mlir  affine_store_2.mlir  affine_vector_load_1.mlir  affine_vector_load_2.mlir  affine_vector_load_3.mlir  affine_vector_store_1.mlir  affine_vector_store_2.mlir  affine_vector_store_3.mlir  arith_addf_1.mlir  arith_addf_2.mlir  arith_addf_3.mlir  arith_addi_1.mlir  arith_addi_2.mlir  arith_addi_3.mlir  arith_addi_4.mlir  arith_addi_5.mlir  arith_addi_6.mlir  arith_addui_extended_1.mlir  (+381 more)
tests/lit-tests-rust/: Cargo.toml  README.md  build.rs  lit.cfg
tests/lit-tests-rust/src/: affine_apply_1.lit-rs  affine_apply_2.lit-rs  affine_dma_start_1.lit-rs  affine_dma_start_2.lit-rs  affine_dma_wait_1.lit-rs  affine_for_1.lit-rs  affine_for_2.lit-rs  affine_for_3.lit-rs  affine_for_4.lit-rs  affine_if_1.lit-rs  affine_if_2.lit-rs  affine_integer_set_1.lit-rs  affine_load_1.lit-rs  affine_load_2.lit-rs  affine_max_1.lit-rs  affine_min_1.lit-rs  affine_parallel_1.lit-rs  affine_parallel_2.lit-rs  affine_parallel_3.lit-rs  affine_prefetch_1.lit-rs  affine_store_1.lit-rs  affine_store_2.lit-rs  affine_vector_load_1.lit-rs  affine_vector_load_2.lit-rs  affine_vector_load_3.lit-rs  affine_vector_store_1.lit-rs  affine_vector_store_2.lit-rs  affine_vector_store_3.lit-rs  arith_addf_1.lit-rs  arith_addf_2.lit-rs  arith_addf_3.lit-rs  arith_addi_1.lit-rs  arith_addi_2.lit-rs  arith_addi_3.lit-rs  arith_addi_4.lit-rs  arith_addi_5.lit-rs  arith_addi_6.lit-rs  arith_addui_extended_1.lit-rs  arith_addui_extended_2.lit-rs  arith_addui_extended_3.lit-rs  (+358 more)
