[package]
name = "mlir"
version = "0.4.16" # major-minor versions to match mlir_sys
edition = "2024"
authors = ["Giordano Salvador <73959795+e3m3@users.noreply.github.com>"]
description = "Rust bindings over the MLIR C API bindings from mlir-sys"
repository = "https://github.com/e3m3/mlir-rust"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
mlir-sys = { version = "0.4.1", tag = "v0.4.1.2" , git = "https://github.com/e3m3/mlir-sys.git" }

[dev-dependencies]
num_cpus = { version = "1.16.0" }

[workspace]
members = [ "tests/lit-tests-rust" ]

[lints.clippy]
macro_metavars_in_unsafe = "allow"
unused_unit = "allow"
