[package]
name = "lit-tests-rust"
edition = "2021"
authors = ["Giordano Salvador <73959795+e3m3@users.noreply.github.com>"]
description = "Lit tests for rust bindings over the MLIR C API bindings from mlir-sys"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
mlir = { path = "../../" }
mlir-sys = { version = "=0.3.0" }

[lints.clippy]
unused_unit = "allow"


#   LIT TEST SECTION

[[bin]]
name = "arith_addf_1"
path = "src/arith_addf_1.lit-rs"

[[bin]]
name = "arith_addi_1"
path = "src/arith_addi_1.lit-rs"

[[bin]]
name = "arith_addui_extended_1"
path = "src/arith_addui_extended_1.lit-rs"

[[bin]]
name = "arith_constant_1"
path = "src/arith_constant_1.lit-rs"

[[bin]]
name = "arith_constant_2"
path = "src/arith_constant_2.lit-rs"

[[bin]]
name = "arith_constant_3"
path = "src/arith_constant_3.lit-rs"

[[bin]]
name = "arith_divf_1"
path = "src/arith_divf_1.lit-rs"

[[bin]]
name = "arith_divsi_1"
path = "src/arith_divsi_1.lit-rs"

[[bin]]
name = "arith_divui_1"
path = "src/arith_divui_1.lit-rs"

[[bin]]
name = "arith_mulf_1"
path = "src/arith_mulf_1.lit-rs"

[[bin]]
name = "arith_muli_1"
path = "src/arith_muli_1.lit-rs"

[[bin]]
name = "arith_mulsi_extended_1"
path = "src/arith_mulsi_extended_1.lit-rs"

[[bin]]
name = "arith_mului_extended_1"
path = "src/arith_mului_extended_1.lit-rs"

[[bin]]
name = "arith_subf_1"
path = "src/arith_subf_1.lit-rs"

[[bin]]
name = "arith_subi_1"
path = "src/arith_subi_1.lit-rs"

[[bin]]
name = "func_call_1"
path = "src/func_call_1.lit-rs"

[[bin]]
name = "func_call_indirect_1"
path = "src/func_call_indirect_1.lit-rs"

[[bin]]
name = "func_constant_1"
path = "src/func_constant_1.lit-rs"

[[bin]]
name = "func_func_1"
path = "src/func_func_1.lit-rs"

[[bin]]
name = "module_empty"
path = "src/module_empty.lit-rs"

[[bin]]
name = "linalg_add_1"
path = "src/linalg_add_1.lit-rs"

[[bin]]
name = "ub_poison_1"
path = "src/ub_poison_1.lit-rs"

[[bin]]
name = "vector_extract_1"
path = "src/vector_extract_1.lit-rs"

[[bin]]
name = "vector_extractelement_1"
path = "src/vector_extractelement_1.lit-rs"

[[bin]]
name = "vector_extractelement_2"
path = "src/vector_extractelement_2.lit-rs"

[[bin]]
name = "vector_from_elements_1"
path = "src/vector_from_elements_1.lit-rs"

[[bin]]
name = "vector_load_1"
path = "src/vector_load_1.lit-rs"

[[bin]]
name = "vector_load_2"
path = "src/vector_load_2.lit-rs"

[[bin]]
name = "vector_load_3"
path = "src/vector_load_3.lit-rs"

[[bin]]
name = "vector_load_4"
path = "src/vector_load_4.lit-rs"

[[bin]]
name = "vector_load_5"
path = "src/vector_load_5.lit-rs"

[[bin]]
name = "vector_load_6"
path = "src/vector_load_6.lit-rs"

[[bin]]
name = "vector_load_7"
path = "src/vector_load_7.lit-rs"

[[bin]]
name = "vector_load_8"
path = "src/vector_load_8.lit-rs"

[[bin]]
name = "vector_print_1"
path = "src/vector_print_1.lit-rs"

[[bin]]
name = "vector_print_2"
path = "src/vector_print_2.lit-rs"

[[bin]]
name = "vector_print_3"
path = "src/vector_print_3.lit-rs"

[[bin]]
name = "vector_store_1"
path = "src/vector_store_1.lit-rs"

[[bin]]
name = "vector_store_2"
path = "src/vector_store_2.lit-rs"

[[bin]]
name = "vector_store_3"
path = "src/vector_store_3.lit-rs"

[[bin]]
name = "vector_store_4"
path = "src/vector_store_4.lit-rs"

[[bin]]
name = "vector_store_5"
path = "src/vector_store_5.lit-rs"

[[bin]]
name = "vector_store_6"
path = "src/vector_store_6.lit-rs"

[[bin]]
name = "vector_store_7"
path = "src/vector_store_7.lit-rs"

[[bin]]
name = "vector_store_8"
path = "src/vector_store_8.lit-rs"

[[bin]]
name = "vector_transfer_read_1"
path = "src/vector_transfer_read_1.lit-rs"

[[bin]]
name = "vector_transfer_read_2"
path = "src/vector_transfer_read_2.lit-rs"

[[bin]]
name = "vector_transfer_read_3"
path = "src/vector_transfer_read_3.lit-rs"

[[bin]]
name = "vector_transfer_read_4"
path = "src/vector_transfer_read_4.lit-rs"

[[bin]]
name = "vector_transfer_read_5"
path = "src/vector_transfer_read_5.lit-rs"

[[bin]]
name = "vector_transfer_read_6"
path = "src/vector_transfer_read_6.lit-rs"

[[bin]]
name = "vector_transfer_write_1"
path = "src/vector_transfer_write_1.lit-rs"

[[bin]]
name = "vector_transfer_write_2"
path = "src/vector_transfer_write_2.lit-rs"

[[bin]]
name = "vector_transfer_write_3"
path = "src/vector_transfer_write_3.lit-rs"

[[bin]]
name = "vector_transfer_write_4"
path = "src/vector_transfer_write_4.lit-rs"

[[bin]]
name = "vector_transfer_write_5"
path = "src/vector_transfer_write_5.lit-rs"

[[bin]]
name = "vector_vectormask_1"
path = "src/vector_vectormask_1.lit-rs"
