[package]
name = "lit-tests-rust"
edition = "2024"
authors = ["Giordano Salvador <73959795+e3m3@users.noreply.github.com>"]
description = "Lit tests for rust bindings over the MLIR C API bindings from mlir-sys"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
mlir = { path = "../../" }
mlir-sys = { version = "0.4.1", tag = "v0.4.1.2" , git = "https://github.com/e3m3/mlir-sys.git" }

[lints.clippy]
unused_unit = "allow"


#   LIT TEST SECTION

[[bin]]
name = "arith_addf_1"
path = "src/arith_addf_1.lit-rs"

[[bin]]
name = "arith_addi_1"
path = "src/arith_addi_1.lit-rs"

[[bin]]
name = "arith_addui_extended_1"
path = "src/arith_addui_extended_1.lit-rs"

[[bin]]
name = "arith_constant_1"
path = "src/arith_constant_1.lit-rs"

[[bin]]
name = "arith_constant_2"
path = "src/arith_constant_2.lit-rs"

[[bin]]
name = "arith_constant_3"
path = "src/arith_constant_3.lit-rs"

[[bin]]
name = "arith_constant_4"
path = "src/arith_constant_4.lit-rs"

[[bin]]
name = "arith_divf_1"
path = "src/arith_divf_1.lit-rs"

[[bin]]
name = "arith_divsi_1"
path = "src/arith_divsi_1.lit-rs"

[[bin]]
name = "arith_divui_1"
path = "src/arith_divui_1.lit-rs"

[[bin]]
name = "arith_mulf_1"
path = "src/arith_mulf_1.lit-rs"

[[bin]]
name = "arith_muli_1"
path = "src/arith_muli_1.lit-rs"

[[bin]]
name = "arith_mulsi_extended_1"
path = "src/arith_mulsi_extended_1.lit-rs"

[[bin]]
name = "arith_mului_extended_1"
path = "src/arith_mului_extended_1.lit-rs"

[[bin]]
name = "arith_subf_1"
path = "src/arith_subf_1.lit-rs"

[[bin]]
name = "arith_subi_1"
path = "src/arith_subi_1.lit-rs"

[[bin]]
name = "func_call_1"
path = "src/func_call_1.lit-rs"

[[bin]]
name = "func_call_indirect_1"
path = "src/func_call_indirect_1.lit-rs"

[[bin]]
name = "func_constant_1"
path = "src/func_constant_1.lit-rs"

[[bin]]
name = "func_func_1"
path = "src/func_func_1.lit-rs"

[[bin]]
name = "memref_alloc_1"
path = "src/memref_alloc_1.lit-rs"

[[bin]]
name = "memref_alloc_2"
path = "src/memref_alloc_2.lit-rs"

[[bin]]
name = "memref_alloc_3"
path = "src/memref_alloc_3.lit-rs"

[[bin]]
name = "memref_alloc_4"
path = "src/memref_alloc_4.lit-rs"

[[bin]]
name = "memref_alloca_1"
path = "src/memref_alloca_1.lit-rs"

[[bin]]
name = "memref_alloca_2"
path = "src/memref_alloca_2.lit-rs"

[[bin]]
name = "memref_alloca_3"
path = "src/memref_alloca_3.lit-rs"

[[bin]]
name = "memref_alloca_4"
path = "src/memref_alloca_4.lit-rs"

[[bin]]
name = "memref_cast_1"
path = "src/memref_cast_1.lit-rs"

[[bin]]
name = "memref_cast_2"
path = "src/memref_cast_2.lit-rs"

[[bin]]
name = "memref_cast_3"
path = "src/memref_cast_3.lit-rs"

[[bin]]
name = "memref_cast_4"
path = "src/memref_cast_4.lit-rs"

[[bin]]
name = "memref_cast_5"
path = "src/memref_cast_5.lit-rs"

[[bin]]
name = "memref_cast_6"
path = "src/memref_cast_6.lit-rs"

[[bin]]
name = "memref_copy_1"
path = "src/memref_copy_1.lit-rs"

[[bin]]
name = "memref_dealloc_1"
path = "src/memref_dealloc_1.lit-rs"

[[bin]]
name = "memref_dim_1"
path = "src/memref_dim_1.lit-rs"

[[bin]]
name = "memref_get_global_1"
path = "src/memref_get_global_1.lit-rs"

[[bin]]
name = "memref_global_1"
path = "src/memref_global_1.lit-rs"

[[bin]]
name = "memref_global_2"
path = "src/memref_global_2.lit-rs"

[[bin]]
name = "memref_global_3"
path = "src/memref_global_3.lit-rs"

[[bin]]
name = "memref_global_4"
path = "src/memref_global_4.lit-rs"

[[bin]]
name = "memref_global_5"
path = "src/memref_global_5.lit-rs"

[[bin]]
name = "memref_load_1"
path = "src/memref_load_1.lit-rs"

[[bin]]
name = "memref_rank_1"
path = "src/memref_rank_1.lit-rs"

[[bin]]
name = "memref_rank_2"
path = "src/memref_rank_2.lit-rs"

[[bin]]
name = "memref_store_1"
path = "src/memref_store_1.lit-rs"

[[bin]]
name = "memref_store_2"
path = "src/memref_store_2.lit-rs"

[[bin]]
name = "memref_transpose_1"
path = "src/memref_transpose_1.lit-rs"

[[bin]]
name = "memref_view_1"
path = "src/memref_view_1.lit-rs"

[[bin]]
name = "memref_view_2"
path = "src/memref_view_2.lit-rs"

[[bin]]
name = "module_empty"
path = "src/module_empty.lit-rs"

[[bin]]
name = "linalg_add_1"
path = "src/linalg_add_1.lit-rs"

[[bin]]
name = "tensor_bitcast_1"
path = "src/tensor_bitcast_1.lit-rs"

[[bin]]
name = "tensor_bitcast_2"
path = "src/tensor_bitcast_2.lit-rs"

[[bin]]
name = "tensor_cast_1"
path = "src/tensor_cast_1.lit-rs"

[[bin]]
name = "tensor_cast_2"
path = "src/tensor_cast_2.lit-rs"

[[bin]]
name = "tensor_cast_3"
path = "src/tensor_cast_3.lit-rs"

[[bin]]
name = "tensor_cast_4"
path = "src/tensor_cast_4.lit-rs"

[[bin]]
name = "tensor_collapse_shape_1"
path = "src/tensor_collapse_shape_1.lit-rs"

[[bin]]
name = "tensor_concat_1"
path = "src/tensor_concat_1.lit-rs"

[[bin]]
name = "tensor_concat_2"
path = "src/tensor_concat_2.lit-rs"

[[bin]]
name = "tensor_dim_1"
path = "src/tensor_dim_1.lit-rs"

[[bin]]
name = "tensor_empty_1"
path = "src/tensor_empty_1.lit-rs"

[[bin]]
name = "tensor_empty_2"
path = "src/tensor_empty_2.lit-rs"

[[bin]]
name = "tensor_expand_shape_1"
path = "src/tensor_expand_shape_1.lit-rs"

[[bin]]
name = "tensor_extract_1"
path = "src/tensor_extract_1.lit-rs"

[[bin]]
name = "tensor_extract_2"
path = "src/tensor_extract_2.lit-rs"

[[bin]]
name = "tensor_extract_slice_1"
path = "src/tensor_extract_slice_1.lit-rs"

[[bin]]
name = "tensor_extract_slice_2"
path = "src/tensor_extract_slice_2.lit-rs"

[[bin]]
name = "tensor_from_elements_1"
path = "src/tensor_from_elements_1.lit-rs"

[[bin]]
name = "tensor_generate_1"
path = "src/tensor_generate_1.lit-rs"

[[bin]]
name = "tensor_generate_2"
path = "src/tensor_generate_2.lit-rs"

[[bin]]
name = "tensor_pad_1"
path = "src/tensor_pad_1.lit-rs"

[[bin]]
name = "tensor_rank_1"
path = "src/tensor_rank_1.lit-rs"

[[bin]]
name = "tensor_rank_2"
path = "src/tensor_rank_2.lit-rs"

[[bin]]
name = "tensor_reshape_1"
path = "src/tensor_reshape_1.lit-rs"

[[bin]]
name = "tensor_reshape_2"
path = "src/tensor_reshape_2.lit-rs"

[[bin]]
name = "tensor_reshape_3"
path = "src/tensor_reshape_3.lit-rs"

[[bin]]
name = "tensor_reshape_4"
path = "src/tensor_reshape_4.lit-rs"

[[bin]]
name = "tensor_reshape_5"
path = "src/tensor_reshape_5.lit-rs"

[[bin]]
name = "ub_poison_1"
path = "src/ub_poison_1.lit-rs"

[[bin]]
name = "vector_extract_1"
path = "src/vector_extract_1.lit-rs"

[[bin]]
name = "vector_extractelement_1"
path = "src/vector_extractelement_1.lit-rs"

[[bin]]
name = "vector_extractelement_2"
path = "src/vector_extractelement_2.lit-rs"

[[bin]]
name = "vector_from_elements_1"
path = "src/vector_from_elements_1.lit-rs"

[[bin]]
name = "vector_load_1"
path = "src/vector_load_1.lit-rs"

[[bin]]
name = "vector_load_2"
path = "src/vector_load_2.lit-rs"

[[bin]]
name = "vector_load_3"
path = "src/vector_load_3.lit-rs"

[[bin]]
name = "vector_load_4"
path = "src/vector_load_4.lit-rs"

[[bin]]
name = "vector_load_5"
path = "src/vector_load_5.lit-rs"

[[bin]]
name = "vector_load_6"
path = "src/vector_load_6.lit-rs"

[[bin]]
name = "vector_load_7"
path = "src/vector_load_7.lit-rs"

[[bin]]
name = "vector_load_8"
path = "src/vector_load_8.lit-rs"

[[bin]]
name = "vector_print_1"
path = "src/vector_print_1.lit-rs"

[[bin]]
name = "vector_print_2"
path = "src/vector_print_2.lit-rs"

[[bin]]
name = "vector_print_3"
path = "src/vector_print_3.lit-rs"

[[bin]]
name = "vector_store_1"
path = "src/vector_store_1.lit-rs"

[[bin]]
name = "vector_store_2"
path = "src/vector_store_2.lit-rs"

[[bin]]
name = "vector_store_3"
path = "src/vector_store_3.lit-rs"

[[bin]]
name = "vector_store_4"
path = "src/vector_store_4.lit-rs"

[[bin]]
name = "vector_store_5"
path = "src/vector_store_5.lit-rs"

[[bin]]
name = "vector_store_6"
path = "src/vector_store_6.lit-rs"

[[bin]]
name = "vector_store_7"
path = "src/vector_store_7.lit-rs"

[[bin]]
name = "vector_store_8"
path = "src/vector_store_8.lit-rs"

[[bin]]
name = "vector_transfer_read_1"
path = "src/vector_transfer_read_1.lit-rs"

[[bin]]
name = "vector_transfer_read_2"
path = "src/vector_transfer_read_2.lit-rs"

[[bin]]
name = "vector_transfer_read_3"
path = "src/vector_transfer_read_3.lit-rs"

[[bin]]
name = "vector_transfer_read_4"
path = "src/vector_transfer_read_4.lit-rs"

[[bin]]
name = "vector_transfer_read_5"
path = "src/vector_transfer_read_5.lit-rs"

[[bin]]
name = "vector_transfer_read_6"
path = "src/vector_transfer_read_6.lit-rs"

[[bin]]
name = "vector_transfer_write_1"
path = "src/vector_transfer_write_1.lit-rs"

[[bin]]
name = "vector_transfer_write_2"
path = "src/vector_transfer_write_2.lit-rs"

[[bin]]
name = "vector_transfer_write_3"
path = "src/vector_transfer_write_3.lit-rs"

[[bin]]
name = "vector_transfer_write_4"
path = "src/vector_transfer_write_4.lit-rs"

[[bin]]
name = "vector_transfer_write_5"
path = "src/vector_transfer_write_5.lit-rs"

[[bin]]
name = "vector_vectormask_1"
path = "src/vector_vectormask_1.lit-rs"
