[package]
name = "lit-tests-rust"
edition = "2024"
authors = ["Giordano Salvador <73959795+e3m3@users.noreply.github.com>"]
description = "Lit tests for rust bindings over the MLIR C API bindings from mlir-sys"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
mlir = { path = "../../" }
mlir-sys = { tag = "v0.4.1.3" , git = "https://github.com/e3m3/mlir-sys.git" }

[lints.clippy]
unused_unit = "allow"

[[bin]]
name = "run"
path = "src/main.rs"
